Add link to extension repo

--- a/driveshot/index.html
+++ b/driveshot/index.html
@@ -7,6 +7,7 @@
 <p>It was made with the purpose of testing chrome extension creation with manifest v3.</p>
 <p>It takes different types of screenshots of the current tab, and automatically saves to the user's google drive.</p>
 <p>In the options you can set the drive folder id and shared drive id, if they're not set the screenshot is saved to the root of the google drive.</p>
+<a href="https://github.com/williamemir/driveshot">Link to the extension repo</a>
 </body>
 </head>
 </html>
