--- a/driveshot/index.html
+++ b/driveshot/index.html
@@ -6,8 +6,15 @@
 <h1 style="color: #4485b8;">Driveshot</h1>
 <h4>This is a simple google chrome extension</h4>
 <p>It was made with the purpose of testing chrome extension creation with manifest v3.</p>
-<p>It takes different types of screenshots of the current tab, and automatically saves to the user's google drive.</p>
+<p>It takes different types of screenshots of the current tab (area, all page, currrent view), and automatically saves to the user's google drive, or the clipboard, or save to the user's disk, all of this is configurable.</p>
 <p>In the options you can set the drive folder id and shared drive id, if they're not set the screenshot is saved to the root of the google drive.</p>
-<a href="https://github.com/williamemir/driveshot">Link to the extension repo</a>
+<p><a href="https://dev.wilmedia.net/driveshot/privacy.html">Privacy policy</a></p>
+<a href="https://github.com/williamemir/driveshot">Link to the extension repository</a>
+<h4>Esta es una extension simple de chrome</h4>
+<p>se creo con el fin de experimentar con el desarrollo de extensiones para chrome bajo el manifest v3.</p>
+<p>Puede tomar diferentes tipos de captura de la pestaña actual de chrome (area seleccionada, toda la pagina, vista actual), y puede guardarlas automaticamente en el google drive del usuario, al porta papeles, o en el disco del usuario, todo esto es configurable.</p>
+<p>En las opciones puedes seleccionar el id del folder de google drive donde quieres guardar las capturas y tambien soporta guardar en una unidad compartida de drive, si no se establecen estas configuraciones la captura es guardada en la raiz del google drive del usuario.</p>
+<p><a href="https://dev.wilmedia.net/driveshot/privacy.html">Politica de privacidad</a></p>
+<a href="https://github.com/williamemir/driveshot">Enlace al repositorio.</a>
 </body>
 </html>
